# simulacra

./: .flake8  .gitignore  AGENTS.md  DEVELOPMENT_STATUS.md  LICENSE  README.md  SETUP_WIZARD_GUIDE.md  UNIFIED_INTERFACE_FIXES.md  debug_import.py  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup_simulacra.py  setup_simulacra.sh  start_local_interface.py  start_unified_interface.py
docs/: DESKTOP_UI_GUIDE.md  POPULATION_GENERATION_GUIDE.md  README.md  README_BASIC.md  SETUP.md  analytics_guide.md  conf.py  decision_making_summary.md  environmental_cue_system_summary.md  foundation_summary.md  index.rst  next_steps_roadmap.md  phase1_implementation_status.md  real_time_visualization_guide.md  ui_design_specification.md  ui_implementation_roadmap.md
examples/: cue_system_demo.py  demo_unified_interface.py
examples/test_demos/: demo_action_outcomes.py  demo_analytics_system.py  demo_economic_system.py  demo_movement_system.py  demo_phase_4_2_state_updates.py  demo_population_generation.py  demo_realtime_visualization.py  demo_time_management.py
simulacra_projects/: project_20250524_113256.json
src/: __init__.py
src/agents/: __init__.py  action_outcomes.py  agent.py  behavioral_economics.py  decision_making.py  movement.py
src/analytics/: __init__.py  exporters.py  history.py  metrics.py
src/environment/: __init__.py  city.py  cues.py  district.py  plot.py  spatial.py
src/environment/buildings/: __init__.py  base.py  casino.py  employer.py  liquor_store.py  public_space.py  residential.py
src/population/: __init__.py  distribution_config.py  population_analyzer.py  population_generator.py
src/simulacra/: __init__.py
src/simulacra/agents/: __init__.py  action_outcomes.py  agent.py  behavioral_economics.py  decision_making.py  movement.py
src/simulacra/analytics/: __init__.py  exporters.py  history.py  metrics.py
src/simulacra/environment/: __init__.py  city.py  cues.py  district.py  plot.py  spatial.py
src/simulacra/population/: __init__.py  distribution_config.py  population_analyzer.py  population_generator.py
src/simulacra/simulation/: __init__.py  economy.py  simulation.py  time_manager.py
src/simulacra/utils/: __init__.py  types.py
src/simulacra/visualization/: __init__.py  configuration.py  data_streamer.py  project_management.py  real_time_dashboard.py  simulation_bridge.py  simulation_control.py  template_library.py  unified_app.py  (+1 more)
src/simulation/: __init__.py  economy.py  simulation.py  time_manager.py
src/utils/: __init__.py  types.py
src/visualization/: __init__.py  data_streamer.py  real_time_dashboard.py  simulation_bridge.py  unified_app.py  visualization_server.py
tests/: __init__.py  demo_action_outcomes.py  demo_analytics_system.py  demo_economic_system.py  demo_movement_system.py  demo_phase_4_2_state_updates.py  demo_population_generation.py  demo_realtime_visualization.py  demo_time_management.py  test_action_outcomes.py  test_analytics_history.py  test_decision_making.py  test_desktop_ui.py  test_environment_plot.py  test_environmental_cues.py  test_foundation.py  test_phase_4_2_state_updates.py  test_population_simple.py  test_simulation_performance.py  test_social_removal.py  test_template_library.py  test_time_management.py  test_visualization_server.py  validate_time_management.py  visualization_example.py
(+21 files in other folders)
