[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simulacra"
version = "0.1.0"
description = "Agent-based urban simulation platform"
authors = [
  {name = "Simulacra Developers"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.20",
  "pandas>=1.3",
  "networkx>=3.0",
  "python-dotenv>=1.0",
  "PyYAML>=6.0.1",
  "loguru>=0.7",
  "tqdm>=4.66"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.optional-dependencies]
visualization = [
  "flask>=2.0",
  "flask-socketio>=5.0",
  "python-socketio>=5.0",
  "gevent>=21.0",
  "gevent-websocket>=0.10"
]

desktop = [
  "PyQt6>=6.0",
  "PyQt6-WebEngine>=6.0"
]

[project.scripts]
simulacra-desktop = "start_local_interface:main"
simulacra-unified = "start_unified_interface:main"

[project.urls]
Homepage = "https://example.com"
