[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simulacra"
version = "0.1.0"
description = "Agent-based urban simulation platform"
authors = [
  {name = "Simulacra Developers"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.20",
  "pandas>=1.3",
  "networkx>=3.0",
  "python-dotenv>=1.0",
  "PyYAML>=6.0.1",
  "loguru>=0.7",
  "tqdm>=4.66"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.optional-dependencies]
visualization = [
  "flask>=2.2",
  "flask-socketio>=5.0",
  "python-socketio>=5.0",
  "gevent>=21.0",
  "gevent-websocket>=0.10"
]

desktop = [
  "PyQt6>=6.0",
  "PyQt6-WebEngine>=6.0"
]

dev = [
  "black>=23.11",
  "flake8>=6.1",
  "mypy>=1.7",
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "pytest-mock>=3.12",
  "ipython>=8.17",
  "jupyter>=1.0",
  "memory-profiler>=0.61"
]

[project.scripts]
simulacra-desktop = "start_local_interface:main"
simulacra-unified = "start_unified_interface:main"

[project.urls]
Homepage = "https://example.com"

[tool.setuptools.packages.find]
where = ["src"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["W503", "W504"]
per-file-ignores = {
  "src/simulacra/utils/__init__.py" = "F401"
}
